syntax = "proto3";
package protos.secrets;

import "google/protobuf/wrappers.proto";
import "protos/base.proto";

message Secret {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue key = 2;
  google.protobuf.StringValue masked_value = 3;
  google.protobuf.StringValue description = 4;
  google.protobuf.StringValue creator = 5;
  google.protobuf.StringValue last_updated_by = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
  bool is_active = 9;
}

message GetSecretsRequest {
  Meta meta = 1;
}

message GetSecretsResponse {
  Meta meta = 1;
  google.protobuf.BoolValue success = 2;
  Message message = 3;
  repeated Secret secrets = 4;
}

message GetSecretRequest {
  Meta meta = 1;
  google.protobuf.StringValue secret_id = 2;
}

message GetSecretResponse {
  Meta meta = 1;
  google.protobuf.BoolValue success = 2;
  Message message = 3;
  Secret secret = 4;
}

message CreateSecretRequest {
  Meta meta = 1;
  google.protobuf.StringValue key = 2;
  google.protobuf.StringValue value = 3;
  google.protobuf.StringValue description = 4;
}

message CreateSecretResponse {
  Meta meta = 1;
  google.protobuf.BoolValue success = 2;
  Message message = 3;
  Secret secret = 4;
}

message UpdateSecretOp {
  enum Op {
    UNKNOWN = 0;
    UPDATE_SECRET = 1;
    UPDATE_SECRET_STATUS = 2;
  }

  message UpdateSecret {
    google.protobuf.StringValue description = 1;
    google.protobuf.StringValue value = 2;
  }

  message UpdateSecretStatus {
    google.protobuf.BoolValue is_active = 1;
  }

  Op op = 1;
  google.protobuf.StringValue secret_id = 2;
  oneof update {
    UpdateSecret update_secret = 3;
    UpdateSecretStatus update_secret_status = 4;
  }
}

message UpdateSecretRequest {
  Meta meta = 1;
  repeated UpdateSecretOp update_secret_ops = 2;
}

message UpdateSecretResponse {
  Meta meta = 1;
  google.protobuf.BoolValue success = 2;
  Message message = 3;
  Secret secret = 4;
}
